--- a/src/css/container.css
+++ b/src/css/container.css
@@ -14,6 +14,8 @@
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1200px) {
   .container {
-    max-width: 1200px;
+    max-width: 1320px;
+    padding: 0 30px;
+    margin: 0 auto;
   }
 }
