--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,15 +1,19 @@
 .header {
-  padding: 20px 0;
+  padding: 16px 0;
 }
+
 .nav {
   display: flex;
   justify-content: space-between;
 }
+
 .nav-logo {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   justify-content: center;
+  gap: 3px;
 }
+
 .nav-list {
   display: flex;
   align-items: center;
@@ -19,8 +23,11 @@
 .nav-link {
   position: relative;
   display: block;
+  font-size: 23px;
   font-weight: 500;
-  letter-spacing: 0.02em;
+  line-height: 1.5;
+  color: #111111;
+  -webkit-text-size-adjust: 100%;
   transition: 200ms ease-in;
 }
 .nav-link:hover,
