--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,16 +2,25 @@
   <div class="container">
     <nav class="nav">
       <a class="nav-logo" href="./index.html" aria-label="Site logo">
-        <svg class="nav-logo-icon" width="100" height="30">
-          <use href="{=$icon-path}"></use>
-        </svg>
+        <img
+          src="../img/logo.jpg"
+          alt="../img/logo.jpg"
+          width="32"
+          height="32"
+          class="logo"
+        />
+        <p>Zoetwinkel</p>
       </a>
       <ul class="nav-list">
         <li class="nav-item">
-          <a class="nav-link {=$highlight-act}" href="./page-2.html">Page 2</a>
+          <a class="nav-link {=$highlight-act}" href="./page-2.html"
+            >Neem Contact Op
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {=$highlight-curr}" href="./page-3.html">Page 3</a>
+          <a class="nav-link {=$highlight-curr}" href="./page-3.html"
+            >Privacybeleid</a
+          >
         </li>
       </ul>
     </nav>
