--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,15 +1,25 @@
 <footer class="footer">
   <div class="container">
-    <p class="footer-desc">
-      Made with ✨ by
-      <a
-        class="footer-link"
-        href="https://goit.global/ua/"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        GoIT team
+    <nav>
+      <a class="footer-logo" href="./index.html" aria-label="Site logo">
+        <img
+          src="../img/logo.jpg"
+          alt="../img/logo.jpg"
+          width="32"
+          height="32"
+          class="footer-img"
+        />
+        <p class="text-footer-logo">Zoetwinkel</p>
       </a>
-    </p>
+      <ul class="list-footer">
+        <li>
+          <a class="link-footer" href="./page-3.html">Privacybeleid</a>
+        </li>
+        <li>
+          <a class="link-footer" href="./page-2.html">Neem Contact Op </a>
+        </li>
+      </ul>
+      <p class="text-footer">© zoetwinkel.com</p>
+    </nav>
   </div>
 </footer>
