--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,6 +23,30 @@
           >
         </li>
       </ul>
+      <div class="wrap-burger">
+        <button class="btn-burger open-modal">
+          <svg class="svg-burger">
+            <use href="../img/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
+      </div>
     </nav>
   </div>
 </header>
+
+<div class="mobile-modal-menu is-hidden">
+  <nav>
+    <ul class="mobile-menu-list">
+      <li class="mobile-menu-item">
+        <a class="mobile-modal-link {=$highlight-act}" href="./page-2.html"
+          >Neem Contact Op
+        </a>
+      </li>
+      <li class="mobile-menu-item">
+        <a class="mobile-modal-link {=$highlight-curr}" href="./page-3.html"
+          >Privacybeleid</a
+        >
+      </li>
+    </ul>
+  </nav>
+</div>
