--- a/src/partials/home-page.html
+++ b/src/partials/home-page.html
@@ -71,8 +71,82 @@
   <section class="section-js">
     <div class="iner">
       <h1 class="title-js">Meer Klantbeoordelingen</h1>
-      <div>
-        <img src="../img/Screenshot_12.png" alt="" />
+      <!-- Slider main container -->
+      <div class="swiper">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide">
+            <div class="new-comment">
+              <div>
+                <img class="img-comment" src="../img/swaip.jpg" alt="swaip" />
+              </div>
+              <div>
+                <div>
+                  <p class="text-comment">Lotte Jansen</p>
+                </div>
+                <h2 class="title-comment">Altijd vers en lekker</h2>
+                <p class="text-second-comment">
+                  Ik kom hier vaak voor mijn zoete traktaties. De producten zijn
+                  altijd vers en van hoge kwaliteit.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="new-comment">
+              <div>
+                <img class="img-comment" src="../img/swaip.jpg" alt="swaip" />
+              </div>
+              <div>
+                <div>
+                  <p class="text-comment">Вторий слайд</p>
+                </div>
+                <h2 class="title-comment">Altijd vers en lekker</h2>
+                <p class="text-second-comment">
+                  Ik kom hier vaak voor mijn zoete traktaties. De producten zijn
+                  altijd vers en van hoge kwaliteit.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="new-comment">
+              <div>
+                <img class="img-comment" src="../img/swaip.jpg" alt="swaip" />
+              </div>
+              <div>
+                <div>
+                  <p class="text-comment">Третій слайд</p>
+                </div>
+                <h2 class="title-comment">Altijd vers en lekker</h2>
+                <p class="text-second-comment">
+                  Ik kom hier vaak voor mijn zoete traktaties. De producten zijn
+                  altijd vers en van hoge kwaliteit.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+
+        <!-- If we need navigation buttons -->
+        <div class="btn-wrap">
+          <div class="btn-prev">
+            <svg class="btn-sw-l">
+              <use href="../img/icons.svg#icon-chevron-circle-left"></use>
+            </svg>
+          </div>
+          <div class="btn-next">
+            <svg class="btn-sw-r">
+              <use href="../img/icons.svg#icon-chevron-circle-right"></use>
+            </svg>
+          </div>
+        </div>
+
+        <!-- If we need scrollbar -->
+        <div class="swiper-scrollbar"></div>
       </div>
     </div>
   </section>
