--- a/src/css/home-page.css
+++ b/src/css/home-page.css
@@ -135,6 +135,115 @@
   text-transform: uppercase;
   margin-bottom: 16px;
 }
+
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.btn-style {
+  width: 30px;
+  height: 30px;
+  color: #fff;
+  background-color: #02bb02;
+}
+
+.new-comment {
+  max-width: 890px;
+  margin: 3px 35px;
+  padding: 20px;
+  border-radius: 20px;
+  display: flex;
+  background-color: #fff;
+  gap: 24px;
+}
+
+.img-comment {
+  width: 102px;
+  height: 169px;
+}
+
+.title-comment {
+  font-size: 28px;
+  text-transform: uppercase;
+  text-align: left;
+  font-weight: 400;
+}
+
+.text-comment {
+  font-size: 18px;
+  text-align: left;
+  font-weight: 400;
+}
+
+.text-second-comment {
+  max-width: 695px;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.swiper {
+  position: relative;
+  height: 235px;
+}
+
+.swiper-slide {
+  width: 300px;
+  background-color: #f4f4f4;
+  z-index: 3;
+}
+
+.btn-prev {
+  position: absolute;
+  top: 103px;
+  left: 1px;
+  z-index: 100;
+}
+
+.btn-sw-l {
+  width: 30px;
+  height: 30px;
+  fill: #02bb02;
+}
+
+.btn-next {
+  position: absolute;
+  top: 103px;
+  right: 1px;
+  z-index: 100;
+}
+
+.btn-sw-r {
+  width: 30px;
+  height: 30px;
+  fill: #02bb02;
+}
+
+.swiper-horizontal .swiper-scrollbar,
+.swiper-scrollbar.swiper-scrollbar-horizontal {
+  background-color: rgb(214, 214, 214);
+}
+
+.swiper-horizontal .swiper-scrollbar-drag {
+  background: #02bb02;
+}
+
 /* .section-geschiedenis */
 .section-geschiedenis {
   padding: 48px 0;
