--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,8 +3,8 @@
     <nav class="nav">
       <a class="nav-logo" href="./index.html" aria-label="Site logo">
         <img
-          src="../img/logo.jpg"
-          alt="../img/logo.jpg"
+          src="./img/logo.jpg"
+          alt="./img/logo.jpg"
           width="32"
           height="32"
           class="logo"
