--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,8 +3,8 @@
     <nav class="nav">
       <a class="nav-logo" href="./index.html" aria-label="Site logo">
         <img
-          src="./img/logo.jpg"
-          alt="./img/logo.jpg"
+          src="/img/logo.jpg"
+          alt="/img/logo.jpg"
           width="32"
           height="32"
           class="logo"
@@ -26,7 +26,7 @@
       <div class="wrap-burger">
         <button class="btn-burger open-modal">
           <svg class="svg-burger">
-            <use href="../img/icons.svg#icon-menu"></use>
+            <use href="/img/icons.svg#icon-menu"></use>
           </svg>
         </button>
       </div>
