--- a/src/partials/home-page.html
+++ b/src/partials/home-page.html
@@ -4,7 +4,7 @@
       <div class="wrap-hero">
         <div>
           <img
-            src="../img/leadblock_image.jpg"
+            src="/img/leadblock_image.jpg"
             alt="images"
             class="img-title-hero"
           />
@@ -34,31 +34,31 @@
       <div>
         <ul class="list-producten">
           <li class="list-style-producten">
-            <img class="img-producten" src="../img/producten/img1.jpg" alt="" />
+            <img class="img-producten" src="/img/producten/img1.jpg" alt="" />
             <p class="text-producten">Fruitgommen</p>
           </li>
           <li class="list-style-producten">
-            <img class="img-producten" src="../img/producten/img2.jpg" alt="" />
+            <img class="img-producten" src="/img/producten/img2.jpg" alt="" />
             <p class="text-producten">Nougat</p>
           </li>
           <li class="list-style-producten">
-            <img class="img-producten" src="../img/producten/img3.jpg" alt="" />
+            <img class="img-producten" src="/img/producten/img3.jpg" alt="" />
             <p class="text-producten">Marsepein</p>
           </li>
           <li class="list-style-producten">
-            <img class="img-producten" src="../img/producten/img4.jpg" alt="" />
+            <img class="img-producten" src="/img/producten/img4.jpg" alt="" />
             <p class="text-producten">Mintsnoepjes</p>
           </li>
           <li class="list-style-producten">
-            <img class="img-producten" src="../img/producten/img5.jpg" alt="" />
+            <img class="img-producten" src="/img/producten/img5.jpg" alt="" />
             <p class="text-producten">Zure Matjes</p>
           </li>
           <li class="list-style-producten">
-            <img class="img-producten" src="../img/producten/img6.jpg" alt="" />
+            <img class="img-producten" src="/img/producten/img6.jpg" alt="" />
             <p class="text-producten">Suikerstokjes</p>
           </li>
           <li class="list-style-producten">
-            <img class="img-producten" src="../img/producten/img7.jpg" alt="" />
+            <img class="img-producten" src="/img/producten/img7.jpg" alt="" />
             <p class="text-producten">Gekleurde Spekken</p>
           </li>
         </ul>
@@ -79,7 +79,7 @@
           <div class="swiper-slide">
             <div class="new-comment">
               <div>
-                <img class="img-comment" src="../img/swaip.jpg" alt="swaip" />
+                <img class="img-comment" src="/img/swaip.jpg" alt="swaip" />
               </div>
               <div>
                 <div>
@@ -96,7 +96,7 @@
           <div class="swiper-slide">
             <div class="new-comment">
               <div>
-                <img class="img-comment" src="../img/swaip.jpg" alt="swaip" />
+                <img class="img-comment" src="/img/swaip.jpg" alt="swaip" />
               </div>
               <div>
                 <div>
@@ -113,7 +113,7 @@
           <div class="swiper-slide">
             <div class="new-comment">
               <div>
-                <img class="img-comment" src="../img/swaip.jpg" alt="swaip" />
+                <img class="img-comment" src="/img/swaip.jpg" alt="swaip" />
               </div>
               <div>
                 <div>
@@ -135,12 +135,12 @@
         <div class="btn-wrap">
           <div class="btn-prev">
             <svg class="btn-sw-l">
-              <use href="../img/icons.svg#icon-chevron-circle-left"></use>
+              <use href="/img/icons.svg#icon-chevron-circle-left"></use>
             </svg>
           </div>
           <div class="btn-next">
             <svg class="btn-sw-r">
-              <use href="../img/icons.svg#icon-chevron-circle-right"></use>
+              <use href="/img/icons.svg#icon-chevron-circle-right"></use>
             </svg>
           </div>
         </div>
@@ -155,7 +155,7 @@
       <div>
         <img
           class="img-geschiedenis"
-          src="../img/geschiedenis/description_7_image.jpg"
+          src="/img/geschiedenis/description_7_image.jpg"
           alt=""
         />
       </div>
@@ -181,37 +181,37 @@
         </p>
       </div>
       <div>
-        <img class="img-locatie" src="../img/Screenshot_1.png" alt="" />
+        <img class="img-locatie" src="/img/Screenshot_1.png" alt="" />
       </div>
       <div>
         <ul class="list-locatie">
           <li class="list-locatie-style">
             <svg class="svg-locatie" widh="20" height="20">
-              <use href="../img/icons.svg#icon-checkmark"></use>
+              <use href="/img/icons.svg#icon-checkmark"></use>
             </svg>
             <p class="text-list-locatie">Centrale locatie</p>
           </li>
           <li class="list-locatie-style">
             <svg class="svg-locatie" widh="20" height="20">
-              <use href="../img/icons.svg#icon-checkmark"></use>
+              <use href="/img/icons.svg#icon-checkmark"></use>
             </svg>
             <p class="text-list-locatie">Grote selectie snoep</p>
           </li>
           <li class="list-locatie-style">
             <svg class="svg-locatie" widh="20" height="20">
-              <use href="../img/icons.svg#icon-checkmark"></use>
+              <use href="/img/icons.svg#icon-checkmark"></use>
             </svg>
             <p class="text-list-locatie">Vers en van hoge kwaliteit</p>
           </li>
           <li class="list-locatie-style">
             <svg class="svg-locatie" widh="20" height="20">
-              <use href="../img/icons.svg#icon-checkmark"></use>
+              <use href="/img/icons.svg#icon-checkmark"></use>
             </svg>
             <p class="text-list-locatie">Vriendelijke service</p>
           </li>
           <li class="list-locatie-style">
             <svg class="svg-locatie" widh="20" height="20">
-              <use href="../img/icons.svg#icon-checkmark"></use>
+              <use href="/img/icons.svg#icon-checkmark"></use>
             </svg>
             <p class="text-list-locatie">Gezellige sfeer</p>
           </li>
@@ -224,10 +224,10 @@
       <h1 class="title-home">Onze Producten</h1>
       <div class="wrap-img-home">
         <div>
-          <img class="img-home" src="../img/last-home/img1.jpg" alt="" />
+          <img class="img-home" src="/img/last-home/img1.jpg" alt="" />
         </div>
         <div class="wrap-wrap-img">
-          <img class="img-home" src="../img/last-home/img2.jpg" alt="" />
+          <img class="img-home" src="/img/last-home/img2.jpg" alt="" />
         </div>
       </div>
       <div>
