--- a/src/css/container.css
+++ b/src/css/container.css
@@ -1,21 +1,21 @@
 /* Styles for Mobile devices */
 .container {
-  min-width: 320px;
-  max-width: 375px;
+  min-width: 282px;
+  max-width: 540px;
   margin: 0 auto;
   padding: 0 16px;
 }
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
   .container {
-    max-width: 768px;
+    min-width: 768px;
+    max-width: 1320px;
   }
 }
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1200px) {
   .container {
+    min-width: 1200;
     max-width: 1320px;
-    padding: 0 30px;
-    margin: 0 auto;
   }
 }
