--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,23 @@
 .header {
   padding: 16px 0;
-  border-bottom: 1px solid black;
+  position: fixed;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 1000;
+  overflow-y: auto;
+}
+
+@media only screen and (max-width: 556px) {
+  .header {
+    border-bottom: 1px solid black;
+  }
+}
+
+.wrap {
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav {
@@ -22,13 +39,13 @@
   gap: 40px;
 }
 
-@media only screen and (max-width: 556px) {
+@media only screen and (max-width: 768px) {
   .nav-list {
     display: none;
   }
 }
 
-@media only screen and (min-width: 556px) {
+@media only screen and (min-width: 768px) {
   .wrap-burger {
     display: none;
   }
@@ -81,12 +98,27 @@
   position: fixed;
   top: 64px;
   left: 0;
-  width: 100%;
+  min-width: 320px;
+  max-width: 768px;
   height: 100px; /* Полноэкранное меню */
   background-color: #fff;
   z-index: 1000; /* Меню поверх всех элементов */
   overflow-y: auto; /* Включить прокрутку, если меню большое */
   border-bottom: 1px solid black;
+}
+
+@media only screen and (min-width: 768px) {
+  .mobile-modal-menu {
+    position: fixed;
+    top: 64px;
+    left: 0;
+    width: 100%;
+    height: 100px; /* Полноэкранное меню */
+    background-color: #fff;
+    z-index: 1000; /* Меню поверх всех элементов */
+    overflow-y: auto; /* Включить прокрутку, если меню большое */
+    border-bottom: 1px solid black;
+  }
 }
 
 .mobile-menu-list {
@@ -118,12 +150,4 @@
   pointer-events: none;
   position: absolute;
   opacity: 0;
-}
-
-.icon-open::before {
-  content: '☰'; /* Иконка меню (три полоски) */
-}
-
-.icon-close::before {
-  content: '✖'; /* Иконка закрытия (крестик) */
 }
