--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,52 +1,60 @@
 <header class="header">
   <div class="container">
-    <nav class="nav">
-      <a class="nav-logo" href="./index.html" aria-label="Site logo">
-        <img
-          src="/img/logo.jpg"
-          alt="/img/logo.jpg"
-          width="32"
-          height="32"
-          class="logo"
-        />
-        <p>Zoetwinkel</p>
-      </a>
-      <ul class="nav-list">
-        <li class="nav-item">
-          <a class="nav-link {=$highlight-act}" href="./page-2.html"
-            >Neem Contact Op
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link {=$highlight-curr}" href="./page-3.html"
-            >Privacybeleid</a
-          >
-        </li>
-      </ul>
-      <div class="wrap-burger">
-        <button class="btn-burger open-modal">
-          <svg class="svg-burger">
-            <use href="/img/icons.svg#icon-menu"></use>
-          </svg>
-        </button>
+    <div class="wrap">
+      <div class="wrap-logo">
+        <a class="nav-logo" href="./index.html" aria-label="Site logo">
+          <img
+            src="/img/logo.jpg"
+            alt="/img/logo.jpg"
+            width="32"
+            height="32"
+            class="logo"
+          />
+          <p>Zoetwinkel</p>
+        </a>
       </div>
-    </nav>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link {=$highlight-act}" href="./page-2.html"
+              >Neem Contact Op
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {=$highlight-curr}" href="./page-3.html"
+              >Privacybeleid</a
+            >
+          </li>
+        </ul>
+        <div class="wrap-burger">
+          <button class="btn-burger open-modal">
+            <svg class="svg-burger">
+              <use href="/img/icons.svg#icon-menu"></use>
+            </svg>
+          </button>
+        </div>
+      </nav>
+    </div>
   </div>
 </header>
 
-<div class="mobile-modal-menu is-hidden">
-  <nav>
-    <ul class="mobile-menu-list">
-      <li class="mobile-menu-item">
-        <a class="mobile-modal-link {=$highlight-act}" href="./page-2.html"
-          >Neem Contact Op
-        </a>
-      </li>
-      <li class="mobile-menu-item">
-        <a class="mobile-modal-link {=$highlight-curr}" href="./page-3.html"
-          >Privacybeleid</a
-        >
-      </li>
-    </ul>
-  </nav>
+<div class="container">
+  <div class="mobile-modal-menu is-hidden">
+    <div class="wrap-modal">
+      <nav>
+        <ul class="mobile-menu-list">
+          <li class="mobile-menu-item">
+            <a class="mobile-modal-link {=$highlight-act}" href="./page-2.html"
+              >Neem Contact Op
+            </a>
+          </li>
+          <li class="mobile-menu-item">
+            <a class="mobile-modal-link {=$highlight-curr}" href="./page-3.html"
+              >Privacybeleid</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </div>
