--- a/src/partials/home-page.html
+++ b/src/partials/home-page.html
@@ -1,247 +1,244 @@
-<main>
-  <section class="section-hero">
-    <div class="iner">
-      <div class="wrap-hero">
-        <div>
-          <img
-            src="/img/leadblock_image.jpg"
-            alt="images"
-            class="img-title-hero"
-          />
-        </div>
-        <div>
-          <h1 class="title-hero">Zoetwinkel</h1>
-          <h3 class="general-hero">Welkom bij Onze Snoepwinkel!</h3>
-          <p class="text-hero">
-            Bij ons kunt u genieten van de lekkerste snoepjes en chocolade in
-            Nederland. Kom langs en ontdek onze heerlijke producten in een
-            gezellige en uitnodigende sfeer.
-          </p>
-          <a class="link-hero" href="">Neem Contact Op</a>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="section-producten">
-    <div class="iner">
-      <div class="wrap-title-producten">
-        <h1 class="title-producten">Onze Producten</h1>
-        <p class="general-producten">
-          Ontdek ons uitgebreide assortiment aan snoep en chocolade, perfect
-          voor elke zoetekauw.
-        </p>
-      </div>
-      <div>
-        <ul class="list-producten">
-          <li class="list-style-producten">
-            <img class="img-producten" src="/img/producten/img1.jpg" alt="" />
-            <p class="text-producten">Fruitgommen</p>
-          </li>
-          <li class="list-style-producten">
-            <img class="img-producten" src="/img/producten/img2.jpg" alt="" />
-            <p class="text-producten">Nougat</p>
-          </li>
-          <li class="list-style-producten">
-            <img class="img-producten" src="/img/producten/img3.jpg" alt="" />
-            <p class="text-producten">Marsepein</p>
-          </li>
-          <li class="list-style-producten">
-            <img class="img-producten" src="/img/producten/img4.jpg" alt="" />
-            <p class="text-producten">Mintsnoepjes</p>
-          </li>
-          <li class="list-style-producten">
-            <img class="img-producten" src="/img/producten/img5.jpg" alt="" />
-            <p class="text-producten">Zure Matjes</p>
-          </li>
-          <li class="list-style-producten">
-            <img class="img-producten" src="/img/producten/img6.jpg" alt="" />
-            <p class="text-producten">Suikerstokjes</p>
-          </li>
-          <li class="list-style-producten">
-            <img class="img-producten" src="/img/producten/img7.jpg" alt="" />
-            <p class="text-producten">Gekleurde Spekken</p>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <h2 class="ending-producten">Zoet Genot in Elke Hap</h2>
-      </div>
-    </div>
-  </section>
-  <section class="section-js">
-    <div class="iner">
-      <h1 class="title-js">Meer Klantbeoordelingen</h1>
-      <!-- Slider main container -->
-      <div class="swiper">
-        <!-- Additional required wrapper -->
-        <div class="swiper-wrapper">
-          <!-- Slides -->
-          <div class="swiper-slide">
-            <div class="new-comment">
-              <div>
-                <img class="img-comment" src="/img/swaip.jpg" alt="swaip" />
-              </div>
-              <div>
-                <div>
-                  <p class="text-comment">Lotte Jansen</p>
-                </div>
-                <h2 class="title-comment">Altijd vers en lekker</h2>
-                <p class="text-second-comment">
-                  Ik kom hier vaak voor mijn zoete traktaties. De producten zijn
-                  altijd vers en van hoge kwaliteit.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="new-comment">
-              <div>
-                <img class="img-comment" src="/img/swaip.jpg" alt="swaip" />
-              </div>
-              <div>
-                <div>
-                  <p class="text-comment">Вторий слайд</p>
-                </div>
-                <h2 class="title-comment">Altijd vers en lekker</h2>
-                <p class="text-second-comment">
-                  Ik kom hier vaak voor mijn zoete traktaties. De producten zijn
-                  altijd vers en van hoge kwaliteit.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="new-comment">
-              <div>
-                <img class="img-comment" src="/img/swaip.jpg" alt="swaip" />
-              </div>
-              <div>
-                <div>
-                  <p class="text-comment">Третій слайд</p>
-                </div>
-                <h2 class="title-comment">Altijd vers en lekker</h2>
-                <p class="text-second-comment">
-                  Ik kom hier vaak voor mijn zoete traktaties. De producten zijn
-                  altijd vers en van hoge kwaliteit.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
-
-        <!-- If we need navigation buttons -->
-        <div class="btn-wrap">
-          <div class="btn-prev">
-            <svg class="btn-sw-l">
-              <use href="/img/icons.svg#icon-chevron-circle-left"></use>
-            </svg>
-          </div>
-          <div class="btn-next">
-            <svg class="btn-sw-r">
-              <use href="/img/icons.svg#icon-chevron-circle-right"></use>
-            </svg>
-          </div>
-        </div>
-
-        <!-- If we need scrollbar -->
-        <div class="swiper-scrollbar"></div>
-      </div>
-    </div>
-  </section>
-  <section class="section-geschiedenis">
-    <div class="iner">
+<section class="section-hero">
+  <div class="iner">
+    <div class="wrap-hero">
       <div>
         <img
-          class="img-geschiedenis"
-          src="/img/geschiedenis/description_7_image.jpg"
-          alt=""
+          src="/img/leadblock_image.jpg"
+          alt="images"
+          class="img-title-hero"
         />
       </div>
       <div>
-        <h1 class="title-geschiedenis">Onze Geschiedenis</h1>
-        <p class="text-geschiedenis">
-          Sinds onze opening hebben we ons toegewijd aan het bieden van de beste
-          snoepjes en chocolade aan onze klanten. Onze passie voor kwaliteit en
-          klanttevredenheid heeft ons geholpen om een vertrouwde naam te worden
-          in de snoepindustrie.
+        <h1 class="title-hero">Zoetwinkel</h1>
+        <p class="general-hero">Welkom bij Onze Snoepwinkel!</p>
+        <p class="text-hero">
+          Bij ons kunt u genieten van de lekkerste snoepjes en chocolade in
+          Nederland. Kom langs en ontdek onze heerlijke producten in een
+          gezellige en uitnodigende sfeer.
         </p>
-        <a class="link-geschiedenis" href="">Neem Contact Op</a>
+        <a class="link-hero" href="">Neem Contact Op</a>
       </div>
     </div>
-  </section>
-  <section class="section-locatie">
-    <div class="iner">
-      <div class="wrap-title-locatie">
-        <h1 class="title-locatie">Onze Locatie</h1>
-        <p class="text-locatie">
-          Bezoek onze snoepwinkel in het hart van Nederland. Bekijk onze locatie
-          op de kaart en ontdek de zoetste lekkernijen.
-        </p>
+  </div>
+</section>
+<section class="section-producten">
+  <div class="iner">
+    <div class="wrap-title-producten">
+      <h1 class="title-producten">Onze Producten</h1>
+      <p class="general-producten">
+        Ontdek ons uitgebreide assortiment aan snoep en chocolade, perfect voor
+        elke zoetekauw.
+      </p>
+    </div>
+    <div>
+      <ul class="list-producten">
+        <li class="list-style-producten">
+          <img class="img-producten" src="/img/producten/img1.jpg" alt="" />
+          <p class="text-producten">Fruitgommen</p>
+        </li>
+        <li class="list-style-producten">
+          <img class="img-producten" src="/img/producten/img2.jpg" alt="" />
+          <p class="text-producten">Nougat</p>
+        </li>
+        <li class="list-style-producten">
+          <img class="img-producten" src="/img/producten/img3.jpg" alt="" />
+          <p class="text-producten">Marsepein</p>
+        </li>
+        <li class="list-style-producten">
+          <img class="img-producten" src="/img/producten/img4.jpg" alt="" />
+          <p class="text-producten">Mintsnoepjes</p>
+        </li>
+        <li class="list-style-producten">
+          <img class="img-producten" src="/img/producten/img5.jpg" alt="" />
+          <p class="text-producten">Zure Matjes</p>
+        </li>
+        <li class="list-style-producten">
+          <img class="img-producten" src="/img/producten/img6.jpg" alt="" />
+          <p class="text-producten">Suikerstokjes</p>
+        </li>
+        <li class="list-style-producten">
+          <img class="img-producten" src="/img/producten/img7.jpg" alt="" />
+          <p class="text-producten">Gekleurde Spekken</p>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <h2 class="ending-producten">Zoet Genot in Elke Hap</h2>
+    </div>
+  </div>
+</section>
+<section class="section-js">
+  <div class="iner">
+    <h1 class="title-js">Meer Klantbeoordelingen</h1>
+    <!-- Slider main container -->
+    <div class="swiper">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">
+          <div class="new-comment">
+            <div>
+              <img class="img-comment" src="/img/swaip.jpg" alt="swaip" />
+            </div>
+            <div>
+              <div>
+                <p class="text-comment">Lotte Jansen</p>
+              </div>
+              <h2 class="title-comment">Altijd vers en lekker</h2>
+              <p class="text-second-comment">
+                Ik kom hier vaak voor mijn zoete traktaties. De producten zijn
+                altijd vers en van hoge kwaliteit.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="new-comment">
+            <div>
+              <img class="img-comment" src="/img/swaip.jpg" alt="swaip" />
+            </div>
+            <div>
+              <div>
+                <p class="text-comment">Вторий слайд</p>
+              </div>
+              <h2 class="title-comment">Altijd vers en lekker</h2>
+              <p class="text-second-comment">
+                Ik kom hier vaak voor mijn zoete traktaties. De producten zijn
+                altijd vers en van hoge kwaliteit.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="new-comment">
+            <div>
+              <img class="img-comment" src="/img/swaip.jpg" alt="swaip" />
+            </div>
+            <div>
+              <div>
+                <p class="text-comment">Третій слайд</p>
+              </div>
+              <h2 class="title-comment">Altijd vers en lekker</h2>
+              <p class="text-second-comment">
+                Ik kom hier vaak voor mijn zoete traktaties. De producten zijn
+                altijd vers en van hoge kwaliteit.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div>
-        <img class="img-locatie" src="/img/Screenshot_1.png" alt="" />
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
+
+      <!-- If we need navigation buttons -->
+      <div class="btn-wrap">
+        <div class="btn-prev">
+          <svg class="btn-sw-l">
+            <use href="/img/icons.svg#icon-chevron-circle-left"></use>
+          </svg>
+        </div>
+        <div class="btn-next">
+          <svg class="btn-sw-r">
+            <use href="/img/icons.svg#icon-chevron-circle-right"></use>
+          </svg>
+        </div>
       </div>
+
+      <!-- If we need scrollbar -->
+      <div class="swiper-scrollbar"></div>
+    </div>
+  </div>
+</section>
+<section class="section-geschiedenis">
+  <div class="iner">
+    <div>
+      <img
+        class="img-geschiedenis"
+        src="/img/geschiedenis/description_7_image.jpg"
+        alt=""
+      />
+    </div>
+    <div>
+      <h1 class="title-geschiedenis">Onze Geschiedenis</h1>
+      <p class="text-geschiedenis">
+        Sinds onze opening hebben we ons toegewijd aan het bieden van de beste
+        snoepjes en chocolade aan onze klanten. Onze passie voor kwaliteit en
+        klanttevredenheid heeft ons geholpen om een vertrouwde naam te worden in
+        de snoepindustrie.
+      </p>
+      <a class="link-geschiedenis" href="">Neem Contact Op</a>
+    </div>
+  </div>
+</section>
+<section class="section-locatie">
+  <div class="iner">
+    <div class="wrap-title-locatie">
+      <h1 class="title-locatie">Onze Locatie</h1>
+      <p class="text-locatie">
+        Bezoek onze snoepwinkel in het hart van Nederland. Bekijk onze locatie
+        op de kaart en ontdek de zoetste lekkernijen.
+      </p>
+    </div>
+    <div>
+      <img class="img-locatie" src="/img/Screenshot_1.png" alt="" />
+    </div>
+    <div>
+      <ul class="list-locatie">
+        <li class="list-locatie-style">
+          <svg class="svg-locatie" widh="20" height="20">
+            <use href="/img/icons.svg#icon-checkmark"></use>
+          </svg>
+          <p class="text-list-locatie">Centrale locatie</p>
+        </li>
+        <li class="list-locatie-style">
+          <svg class="svg-locatie" widh="20" height="20">
+            <use href="/img/icons.svg#icon-checkmark"></use>
+          </svg>
+          <p class="text-list-locatie">Grote selectie snoep</p>
+        </li>
+        <li class="list-locatie-style">
+          <svg class="svg-locatie" widh="20" height="20">
+            <use href="/img/icons.svg#icon-checkmark"></use>
+          </svg>
+          <p class="text-list-locatie">Vers en van hoge kwaliteit</p>
+        </li>
+        <li class="list-locatie-style">
+          <svg class="svg-locatie" widh="20" height="20">
+            <use href="/img/icons.svg#icon-checkmark"></use>
+          </svg>
+          <p class="text-list-locatie">Vriendelijke service</p>
+        </li>
+        <li class="list-locatie-style">
+          <svg class="svg-locatie" widh="20" height="20">
+            <use href="/img/icons.svg#icon-checkmark"></use>
+          </svg>
+          <p class="text-list-locatie">Gezellige sfeer</p>
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
+<section class="last-section-home">
+  <div class="iner">
+    <h1 class="title-home">Onze Producten</h1>
+    <div class="wrap-img-home">
       <div>
-        <ul class="list-locatie">
-          <li class="list-locatie-style">
-            <svg class="svg-locatie" widh="20" height="20">
-              <use href="/img/icons.svg#icon-checkmark"></use>
-            </svg>
-            <p class="text-list-locatie">Centrale locatie</p>
-          </li>
-          <li class="list-locatie-style">
-            <svg class="svg-locatie" widh="20" height="20">
-              <use href="/img/icons.svg#icon-checkmark"></use>
-            </svg>
-            <p class="text-list-locatie">Grote selectie snoep</p>
-          </li>
-          <li class="list-locatie-style">
-            <svg class="svg-locatie" widh="20" height="20">
-              <use href="/img/icons.svg#icon-checkmark"></use>
-            </svg>
-            <p class="text-list-locatie">Vers en van hoge kwaliteit</p>
-          </li>
-          <li class="list-locatie-style">
-            <svg class="svg-locatie" widh="20" height="20">
-              <use href="/img/icons.svg#icon-checkmark"></use>
-            </svg>
-            <p class="text-list-locatie">Vriendelijke service</p>
-          </li>
-          <li class="list-locatie-style">
-            <svg class="svg-locatie" widh="20" height="20">
-              <use href="/img/icons.svg#icon-checkmark"></use>
-            </svg>
-            <p class="text-list-locatie">Gezellige sfeer</p>
-          </li>
-        </ul>
+        <img class="img-home" src="/img/last-home/img1.jpg" alt="" />
+      </div>
+      <div class="wrap-wrap-img">
+        <img class="img-home" src="/img/last-home/img2.jpg" alt="" />
       </div>
     </div>
-  </section>
-  <section class="last-section-home">
-    <div class="iner">
-      <h1 class="title-home">Onze Producten</h1>
-      <div class="wrap-img-home">
-        <div>
-          <img class="img-home" src="/img/last-home/img1.jpg" alt="" />
-        </div>
-        <div class="wrap-wrap-img">
-          <img class="img-home" src="/img/last-home/img2.jpg" alt="" />
-        </div>
-      </div>
-      <div>
-        <h2 class="title-home">Wat Wij Aanbieden</h2>
-        <p class="text-home">
-          Bij ons vindt u een breed scala aan snoepjes en lekkernijen,
-          zorgvuldig geselecteerd om aan al uw zoete wensen te voldoen. Of u nu
-          op zoek bent naar klassieke chocolade of moderne traktaties, wij
-          hebben het allemaal.
-        </p>
-        <div class="wrap-link">
-          <a class="link-home" href="">Neem Contact Op</a>
-        </div>
+    <div>
+      <h2 class="title-home">Wat Wij Aanbieden</h2>
+      <p class="text-home">
+        Bij ons vindt u een breed scala aan snoepjes en lekkernijen, zorgvuldig
+        geselecteerd om aan al uw zoete wensen te voldoen. Of u nu op zoek bent
+        naar klassieke chocolade of moderne traktaties, wij hebben het allemaal.
+      </p>
+      <div class="wrap-link">
+        <a class="link-home" href="">Neem Contact Op</a>
       </div>
     </div>
-  </section>
-</main>
+  </div>
+</section>
