--- a/src/css/header.css
+++ b/src/css/header.css
@@ -98,8 +98,7 @@
   position: fixed;
   top: 64px;
   left: 0;
-  min-width: 320px;
-  max-width: 768px;
+  width: 100%;
   height: 100px; /* Полноэкранное меню */
   background-color: #fff;
   z-index: 1000; /* Меню поверх всех элементов */
