--- a/src/css/header.css
+++ b/src/css/header.css
@@ -125,7 +125,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 554px;
+  width: 100%;
 }
 
 .mobile-modal-link {
