--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -29,7 +29,9 @@
         <div class="wrap-burger">
           <button class="btn-burger open-modal">
             <svg class="svg-burger">
-              <use href="/img/icons.svg#icon-menu"></use>
+              <use
+                href="https://yevhenii98765.github.io/js-test-layout/assets/icons-BjYJDn2L.svg#icon-menu"
+              ></use>
             </svg>
           </button>
         </div>
