--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,3 +15,5 @@
 @import url('./back-link.css');
 @import url('./footer.css');
 @import url('./home-page.css');
+@import url('./neem-contact-op.css');
+@import url('./privacybeleid.css');
