--- a/src/partials/privacybeleid.html
+++ b/src/partials/privacybeleid.html
@@ -1,6 +1,6 @@
 <section class="privacybeleid">
   <div class="iner">
-    <div>
+    <div id="header-title">
       <h1 class="title-privacybeleid">Privacybeleid</h1>
       <p>Laatst bijgewerkt: 29 augustus 2024</p>
       <p class="second-style-text">
@@ -15,6 +15,11 @@
         en gebruiken van informatie in overeenstemming met dit Privacybeleid.
       </p>
       <h2 class="second-style-title">Interpretatie en Definities</h2>
+      <a class="link-up" href="#header-title">
+        <svg class="svg-up">
+          <use href="img/icons.svg#icon-circle-up"></use>
+        </svg>
+      </a>
       <h3 class="third-style-title">Interpretatie</h3>
       <p class="second-style-text">
         Woorden waarvan de beginletter een hoofdletter is, hebben de betekenis
