--- a/src/partials/privacybeleid.html
+++ b/src/partials/privacybeleid.html
@@ -2,7 +2,7 @@
   <div class="iner">
     <div id="header-title">
       <h1 class="title-privacybeleid">Privacybeleid</h1>
-      <p>Laatst bijgewerkt: 29 augustus 2024</p>
+      <p class="data-text">Laatst bijgewerkt: 29 augustus 2024</p>
       <p class="second-style-text">
         Dit Privacybeleid beschrijft ons beleid en onze procedures met
         betrekking tot het verzamelen, gebruiken en openbaar maken van uw
@@ -30,7 +30,7 @@
     <div>
       <h3></h3>
       <p></p>
-      <ul>
+      <ul class="list-style-type">
         <li class="list-style">
           <p class="text-list-style">
             <span class="span-list-style">Account</span> betekent een uniek
@@ -175,13 +175,15 @@
         verbeteren en te analyseren. De technologieën die we gebruiken kunnen
         omvatten:
       </p>
-      <ul>
+      <ul class="list-style-type">
         <li class="list-style">
           <p class="text-list-style">
-            <span class="span-list-style">Cookies of Browsercookies.</span> Een
-            cookie is een klein bestand dat op uw Apparaat wordt geplaatst. U
-            kunt uw browser opdracht geven om alle cookies te weigeren of om aan
-            te geven wanneer een cookie wordt verzonden. Als u echter geen
+            <span class="span-list-style span-margin"
+              >Cookies of Browsercookies.</span
+            >
+            Een cookie is een klein bestand dat op uw Apparaat wordt geplaatst.
+            U kunt uw browser opdracht geven om alle cookies te weigeren of om
+            aan te geven wanneer een cookie wordt verzonden. Als u echter geen
             cookies accepteert, kunt u mogelijk sommige delen van onze Dienst
             niet gebruiken. Tenzij u uw browserinstelling hebt aangepast zodat
             deze cookies weigert, kan onze Dienst cookies gebruiken.
@@ -189,15 +191,15 @@
         </li>
         <li class="list-style">
           <p class="text-list-style">
-            <span class="span-list-style">Web Beacons.</span> Bepaalde secties
-            van onze Dienst en onze e-mails kunnen kleine elektronische
-            bestanden bevatten, bekend als webbakens (ook wel clear gifs, pixel
-            tags en single-pixel gifs genoemd), die het Bedrijf in staat stellen
-            bijvoorbeeld gebruikers te tellen die die pagina's hebben bezocht of
-            een e-mail hebben geopend en voor andere gerelateerde statistieken
-            van de website (bijvoorbeeld het registreren van de populariteit van
-            een bepaalde sectie en het verifiëren van systeem- en
-            serverintegriteit).
+            <span class="span-list-style span-margin">Web Beacons.</span>
+            Bepaalde secties van onze Dienst en onze e-mails kunnen kleine
+            elektronische bestanden bevatten, bekend als webbakens (ook wel
+            clear gifs, pixel tags en single-pixel gifs genoemd), die het
+            Bedrijf in staat stellen bijvoorbeeld gebruikers te tellen die die
+            pagina's hebben bezocht of een e-mail hebben geopend en voor andere
+            gerelateerde statistieken van de website (bijvoorbeeld het
+            registreren van de populariteit van een bepaalde sectie en het
+            verifiëren van systeem- en serverintegriteit).
           </p>
           <p class="text-list-style">
             Cookies kunnen "Persistente" of "Sessiecookies" zijn. Persistente
@@ -211,12 +213,12 @@
           </p>
         </li>
         <li class="list-style">
-          <span class="span-list-style"
+          <span class="span-list-style span-margin"
             >Noodzakelijke / Essentiële Cookies</span
           >
           <p class="text-list-style">Type: Sessiecookies</p>
-          <p>Beheerd door: Ons</p>
-          <p>
+          <p class="text-list-style">Beheerd door: Ons</p>
+          <p class="text-list-style">
             Doel: Deze Cookies zijn essentieel om u diensten te bieden die
             beschikbaar zijn via de Website en om u in staat te stellen sommige
             van de functies ervan te gebruiken. Ze helpen gebruikers te
@@ -227,7 +229,7 @@
           </p>
         </li>
         <li class="list-style">
-          <span class="span-list-style"
+          <span class="span-list-style span-margin"
             >Cookiesbeleid / Kennisgeving Acceptatie Cookies</span
           >
           <p class="text-list-style">Type: Persistente Cookies</p>
@@ -238,7 +240,7 @@
           </p>
         </li>
         <li class="list-style">
-          <span class="span-list-style">Functionele Cookies</span>
+          <span class="span-list-style span-margin">Functionele Cookies</span>
           <p class="text-list-style">Type: Persistente Cookies</p>
           <p class="text-list-style">Beheerd door: Ons</p>
           <p class="text-list-style">
@@ -478,7 +480,7 @@
       Het Bedrijf kan uw Persoonsgegevens openbaar maken in de goedgelovige
       overtuiging dat een dergelijke actie noodzakelijk is om:
     </p>
-    <ul>
+    <ul class="list-style-type">
       <li class="list-style">
         <p class="text-list-style">
           Te voldoen aan een wettelijke verplichting
